--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,9 @@
 *.tar.gz
 *.rar
 
+# iml
+*.iml
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
