--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,18 @@
 			<scope>system</scope>
 			<systemPath>${basedir}/lib/ojdbc8.jar</systemPath> <!-- must match file name -->
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-jdbc</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-jdbc</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-jdbc</artifactId>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
